[build-system]
requires = ["setuptools>=69", "setuptools-scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ocp-models"
description = "Machine learning models for use in catalysis as part of the Open Catalyst Project"
readme = "README.md"
license = {text = "MIT License"}
dynamic = ["version"]
requires-python = ">=3.9, <3.13"
dependencies = [
    "torch",
    "torch_geometric==2.3",
    "torch-scatter",
    "numpy==1.23.5",
    "lmdb",
    "syrupy==3.0.6",
    "ase==3.22.1",
    "pymatgen", #==2023.5.10"  let this be determined based on numpy version for now
    "fastapi<1.0",
    "pyyaml",
    "tensorboard",
    "wandb",
    "numba",
    "e3nn",
    "urllib3",
    "orjson",
    "tqdm"
]

[project.optional-dependencies]  # add optional dependencies to be installed as pip install ocpmodels[dev]
dev = ["pre-commit", "black", "isort", "pytest", "pytest-cov", "coverage", "ruff"]
# docs = []

[tool.setuptools]  # need to set this since we have multiple top level packates (should consider using a src layout!)
packages = ["ocpmodels"]

[tool.setuptools_scm]  # for version instrospection based on tags + commit

[project.urls]
repository = "https://github.com/Open-Catalyst-Project/ocp"
home = "https://opencatalystproject.org/"
# documentation = ""

# include package data
# [tool.setuptools.package-data]
# someModule = ["*.csv"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts  =  "-p no:warnings --import-mode importlib -x --quiet -rxXs --color yes"
filterwarnings  = [
    'ignore::UserWarning',
    'ignore::FutureWarning',
    'ignore::RuntimeWarning'
    ]
testpaths = ["tests"]

[tool.coverage.run]
source = ["ocpmodels"]

[tool.isort]
profile = 'black'
skip_gitignore = true
multi_line_output=3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88


[tool.ruff]
line-length = 88
lint.select = [
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "E",      # pycodestyle error
  "EXE",    # flake8-executable
  "F",      # pyflakes
  "FA",     # flake8-future-annotations
  "FBT003", # boolean-positional-value-in-call
  "FLY",    # flynt
  "I",      # isort
  "ICN",    # flake8-import-conventions
  "PD",     # pandas-vet
  "PERF",   # perflint
  "PIE",    # flake8-pie
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PYI",    # flakes8-pyi
  "Q",      # flake8-quotes
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  "RUF",    # Ruff-specific rules
  "SIM",    # flake8-simplify
  "SLOT",   # flake8-slots
  "TCH",    # flake8-type-checking
  "TID",    # tidy imports
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "W",      # pycodestyle warning
  "YTT",    # flake8-2020
]
lint.ignore = [
  "PLR",    # Design related pylint codes
  "E501",   # Line too long
  "B028",   # No explicit stacklevel
  "EM101",  # Exception must not use a string literal
  "EM102",  # Exception must not use an f-string literal
  "G004",   # f-string in Logging statement
  "RUF015", # Prefer next(iter())
  "RET505", # Unnecessary `elif` after `return`
  "PT004",  # Fixture does not return anthing
  "B017",   # pytest.raises
  "PT011",  # pytest.raises
  "PT012",  # pytest.raises
]
lint.typing-modules = ["mypackage._compat.typing"]
src = ["src"]
lint.unfixable = [
  "T20",  # Removes print statements
  "F841", # Removes unused variables
]
lint.pydocstyle.convention = "google"
lint.isort.known-first-party = ["ocpmodels"]
lint.isort.required-imports = ["from __future__ import annotations"]
