[build-system]
requires = ["setuptools>=69", "setuptools-scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ocp-models"
description = "Machine learning models for use in catalysis as part of the Open Catalyst Project"
readme = "README.md"
license = {text = "MIT License"}
dynamic = ["version"]
requires-python = ">=3.9, <3.13"
dependencies = [
    "torch",
    "numpy==1.23.5",
    "lmdb",
    "syrupy==3.0.6",
    "ase==3.22.1",
    "pymatgen", #==2023.5.10"  let this be determined based on numpy version for now
    "pyyaml",
    "tensorboard",
    "wandb",
    "numba",
    "e3nn",
    "urllib3",
    "orjson",
    "tqdm",
    "submitit"
]

[project.optional-dependencies]  # add optional dependencies to be installed as pip install ocpmodels[dev]
dev = ["pre-commit", "pytest", "pytest-cov", "coverage", "ruff"]
docs = ["jupyter-book", "jupytext", "sphinx","sphinx-autoapi", "umap-learn", "vdict"]
adsorbml = ["dscribe","x3dase","scikit-image"]

[tool.setuptools.packages.find]
include = ["ocpmodels", "experimental"]  # alternatively: `exclude = ["additional*"]`
namespaces = false

[tool.setuptools_scm]  # for version instrospection based on tags + commit

[project.scripts]
ocp = "ocpmodels._cli:main"

[project.urls]
repository = "https://github.com/Open-Catalyst-Project/ocp"
home = "https://opencatalystproject.org/"
# documentation = ""

# include package data
# [tool.setuptools.package-data]
# someModule = ["*.csv"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts  =  "-p no:warnings --import-mode importlib -x --quiet -rxXs --color yes"
filterwarnings  = [
    'ignore::UserWarning',
    'ignore::FutureWarning',
    'ignore::RuntimeWarning'
    ]
testpaths = ["tests"]

[tool.coverage.run]
source = ["ocpmodels"]

[tool.ruff]
line-length = 88
lint.select = [
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "E",      # pycodestyle error
  "EXE",    # flake8-executable
  "F",      # pyflakes
  "FA",     # flake8-future-annotations
  "FBT003", # boolean-positional-value-in-call
  "FLY",    # flynt
  "I",      # isort
  "ICN",    # flake8-import-conventions
  "PD",     # pandas-vet
  "PERF",   # perflint
  "PIE",    # flake8-pie
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PYI",    # flakes8-pyi
  "Q",      # flake8-quotes
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  "RUF",    # Ruff-specific rules
  "SIM",    # flake8-simplify
  "SLOT",   # flake8-slots
  "TCH",    # flake8-type-checking
  "TID",    # tidy imports
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "W",      # pycodestyle warning
  "YTT",    # flake8-2020
]
lint.ignore = [
  "PLR",    # Design related pylint codes
  "E501",   # Line too long
  "B028",   # No explicit stacklevel
  "EM101",  # Exception must not use a string literal
  "EM102",  # Exception must not use an f-string literal
  "G004",   # f-string in Logging statement
  "RUF015", # Prefer next(iter())
  "RET505", # Unnecessary `elif` after `return`
  "PT004",  # Fixture does not return anthing
  "B017",   # pytest.raises
  "PT011",  # pytest.raises
  "PT012",  # pytest.raises"
  "E741",  # ambigous variable naming, i.e. one letter
  "FBT003",  # boolean positional variable in function call
  "PERF203",  # `try`-`except` within a loop incurs performance overhead (no overhead in Py 3.11+)
  "EXE002",  # The file is executable but no shebang is present (not sure why some files come up as this)
]

lint.typing-modules = ["mypackage._compat.typing"]
src = ["src"]
lint.unfixable = [
  "T20",  # Removes print statements
  "F841", # Removes unused variables
]
lint.pydocstyle.convention = "google"
lint.isort.known-first-party = ["ocpmodels"]
lint.isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
"__init__.py" = ["I002"]
"conf.py" = ["I002"]
"ocpmodels/common/*" = ["PLW0603"]  # Using the global statement to update [] is discouraged
"scripts/*" = ["PLW0603"]  # Using the global statement to update [] is discouraged
"ocpmodels/models/*" = ["PERF401"]  # Use a list comprehension to create a transformed list
"ocpmodels/models/gemnet*" = ["B023"]  # Function definition does not bind loop variable `first_sph`
