[metadata]
name = ocpmodels
version = 0.0.1

[options]
packages = ocpmodels
python_requires = >=3.7
install_requires =
    torch==1.13.1
    lmdb 
    ase==3.22.1 
    pymatgen==2023.5.10 
    pyyaml 
    tensorboard 
    wandb
    torch_geometric==2.2.0
    torch_sparse
    torch_scatter
    numba  
    e3nn
    urllib3
