[metadata]
name = ocpmodels
version = 0.0.1

[options]
packages = ocpmodels
python_requires = >=3.7
install_requires =
    lmdb
    syrupy==3.0.6 
    ase==3.22.1 
    pymatgen==2023.5.10 
    fastapi<1.0
    pyyaml 
    tensorboard 
    wandb
    torch_geometric==2.2.0
    numba  
    e3nn
    urllib3
