[metadata]
name = ocpapi
version = attr: ocpapi.version.VERSION
author = Open Catalyst Project
description = Python client library for the Open Catalyst API
long_description = file: README.md
long_description_content_type = text/markdown
license = LICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    requests == 2.31.0
    responses == 0.23.2
    tenacity == 8.2.3
    tqdm == 4.66.1
    dataclasses-json == 0.6.0

[options.extras_require]
dev = ase == 3.22.1

[options.packages.find]
exclude =
  tests*
