[metadata]
name = ocpapi
version = attr: ocpapi.version.VERSION
author = Open Catalyst Project
author_email = opencatalyst@meta.com
description = Python client library for the Open Catalyst API
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    requests == 2.31.0
    responses == 0.23.2
    tenacity == 8.2.3
    tqdm == 4.66.1
    inquirer == 3.1.3
    dataclasses-json == 0.6.0

[options.extras_require]
dev = 
    ase == 3.22.1
    readchar == 4.0.5

[options.packages.find]
exclude =
  tests*
